--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>microthings8266-hub</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>microthings8266-hub</name>
-    <description>Web application controller and web inteface for microthings8266 project</description>
+    <description>Web application coolbeans.microthings8266hub.controller and web inteface for microthings8266 project</description>
 
     <properties>
         <java.version>1.8</java.version>
