--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
+spring.h2.console.enabled=true
+spring.profiles.active=JPA
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+
 thing.udp.port=7821
 thing.tcp.port=7822
+
+
